files/common/firewall.rules
# This format is understood by iptables-restore. See 'man iptables-restore'.
# These firewall rules allow QEMU virtual machines to get DHCP leases from the
# host computer. They also setup a basic NAT for the VMs to reach the outside
# world.
#
# QEMU bridge name: qemu0
#
# This does not perform any hardening and the default policies remain ACCEPT.

*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

# DHCP packets sent to VMs have no checksum (due to a longstanding bug).
-A POSTROUTING -o qemu0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

# Do not masquerade reserved blocks.
-A POSTROUTING -s 10.2.0.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 10.2.0.0/24 -d 255.255.255.255/32 -j RETURN

# Masquerade all packets going from VMs to the LAN/Internet.
-A POSTROUTING -s 10.2.0.0/24 ! -d 10.2.0.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 10.2.0.0/24 ! -d 10.2.0.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 10.2.0.0/24 ! -d 10.2.0.0/24 -j MASQUERADE
COMMIT

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# Allow inbound
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT

# Accept DNS (port 53) and DHCP (port 67) packets from VMs.
-A INPUT -i qemu0 -p udp -m udp -m multiport --dports 53,67 -j ACCEPT
-A INPUT -i qemu0 -p tcp -m tcp -m multiport --dports 53,67 -j ACCEPT

# Reject everything else.
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p tcp -m tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-port-unreachable

# Allow established traffic to the VM subnet.
-A FORWARD -d 10.2.0.0/24 -o qemu0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# Allow outbound traffic from the VM subnet
-A FORWARD -s 10.2.0.0/24 -i qemu0 -j ACCEPT

# Allow traffic between virtual machines.
-A FORWARD -i qemu0 -o qemu0 -j ACCEPT

# Reject everything else.
-A FORWARD -i qemu0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -o qemu0 -j REJECT --reject-with icmp-port-unreachable
COMMIT
